--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="bg-green-100">
+    <main class="container mx-auto mt-28 px-5 flex bg-white">
       <%= yield %>
     </main>
   </body>
