--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,17 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "https://kit.fontawesome.com/966134bbe7.js", crossorigin: "anonymous" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-green-100">
-    <main class="container mx-auto mt-28 px-5 flex bg-white">
+  <body class="bg-sunbury-light">
+    <main class="container mx-auto my-8 p-4 bg-white">
+      <%= render partial: 'layouts/header' %>
+      <%= render partial: 'layouts/navs' %>
       <%= yield %>
+      <hr class="my-4">
+      <%= render partial: 'layouts/footer' %>
     </main>
   </body>
 </html>
