--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 
   <body class="bg-sunbury-light">
     <main class="container mx-auto my-8 p-4 bg-white">
+      <%= render partial: 'layouts/flash_notice_alert' %>
       <%= render partial: 'layouts/header' %>
       <%= render partial: 'layouts/navs' %>
       <%= yield %>
