--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <main class="container mx-auto my-8 p-4 bg-white">
       <%= render partial: 'layouts/flash_notice_alert' %>
       <%= render partial: 'layouts/header' %>
+      <%= render partial: 'layouts/promotion', collection: @promotions %>
       <%= render partial: 'layouts/navs' %>
       <%= yield %>
       <hr class="my-4">
