Add advices views

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -7,10 +7,10 @@
       <%= link_to 'Emergency', home_path('emergency'), data: { turbo_frame: :tf_content } %>
     </div>
   </div>
-  <div class="col-span-4">
-    <h2 class="txt-heading">Welcome to the Sunbury Dental Practice</h2>
+  <div class="col-span-4 p-4">
+    <h2>Welcome to the Sunbury Dental Practice</h2>
 
-    <div class="mt-4">
+    <div class="mt-4 content">
       <turbo-frame id="tf_content">
         <p>Established in 1959, we have grown into the largest practice in the area with an enviable reputation for providing quality care to patients of all ages.</p>
         <p>The friendly and helpful staff, together with the relaxed environment, will dispel any negative emotions associated with visiting the dentist.</p>
@@ -28,8 +28,8 @@
 <div class="grid grid-cols-7">
   <div class="bg-red-100">
   </div>
-  <div class="col-span-4">
-    <h4 class="txt-heading">Make an appointment by contacting us today</h4>
+  <div class="col-span-4 p-4">
+    <h4>Make an appointment by contacting us today</h4>
 
     <div class="mt-4">
       <turbo-frame id="tf_contact_form">
