--- a/app/views/homes/privacy_policy.html.erb
+++ b/app/views/homes/privacy_policy.html.erb
@@ -1,4 +1,4 @@
-<h2 class='mt-8 text-2xl font-bold text-sunbury prose'>
+<h2 class='mt-8 text-sunbury'>
   Privacy Policy & Cookies
 </h2>
 <div class='mt-8'>
@@ -13,7 +13,7 @@
   <p>
   We collect and process personal information about you with your consent and/or as necessary to provide the products you use, operate our business, meet our contractual and legal obligations, protect the security of our systems and our customers, or fulfill other legitimate interests.
   </p>
-  <h2 class='text-2xl font-bold text-sunbury'>
+  <h2 class='text-sunbury'>
     Collection of Your Personal Information
   </h2>
   <div class='mt-8'>
@@ -70,7 +70,7 @@
     THE SUNBURY DENTAL PRACTICE may also use your personally identifiable information to inform you of other products or services available from THE SUNBURY DENTAL PRACTICE and its affiliates and partners. THE SUNBURY DENTAL PRACTICE may also contact you via surveys to conduct research about your opinion of current services or of potential new services that may be offered.
     </p>
   </div>
-  <h2 class='text-2xl font-bold text-sunbury'>
+  <h2 class='text-sunbury'>
     Disclosure of Your Personal Information
   </h2>
   <div class='mt-4'>
@@ -87,7 +87,7 @@
     We may also share aggregated or deidentified information.
     </p>
   </div>
-  <h2 class='text-2xl font-bold text-sunbury'>
+  <h2 class='text-sunbury'>
     Your Information Choices and Changes
   </h2>
   <div class='mt-4'>
@@ -104,7 +104,7 @@
     <p>
     There are many ways through which web browser signals and other similar mechanisms (for example, "Do Not Track") can indicate your choice to disable tracking, and, while we and others give you choices described in this Statement, we do not currently honor these mechanisms.
     </p>
-    <h2 class='text-2xl font-bold text-sunbury'>
+    <h2 class='text-sunbury'>
       Security of your Personal Information
     </h2>
     <div class='mt-4'>
@@ -112,7 +112,7 @@
       THE SUNBURY DENTAL PRACTICE takes reasonable steps to help secure your personal information in an effort to prevent loss, misuse, and unauthorized access, use, alteration, destruction, or disclosure.
       </p>
     </div>
-    <h2 class='text-2xl font-bold text-sunbury'>
+    <h2 class='text-sunbury'>
       Transfers of Your Personal Information
     </h2>
     <div class='mt-4'>
@@ -123,7 +123,7 @@
       When we transfer personal information from the European Economic Area and Switzerland to other countries, some of which have not been determined by the European Commission to have an adequate level of data protection, we use a variety of legal mechanisms, including contracts, in an effort to help ensure your rights and protections.
       </p>
     </div>
-    <h2 class='text-2xl font-bold text-sunbury'>
+    <h2 class='text-sunbury'>
       For EU Users - Your European Privacy Rights
     </h2>
     <div class='mt-4'>
@@ -145,7 +145,7 @@
       </ul>
       </p>
     </div>
-    <h2 class='text-2xl font-bold text-sunbury'>
+    <h2 class='text-sunbury'>
       For EU Users - Privacy Shield
     </h2>
     <div class='mt-4'>
@@ -162,7 +162,7 @@
       If we transfer your personal information to a third party agent or service provider for processing, we remain potentially liable under the Privacy Shield Principles if our third party agent or service provider processes your personal information in a manner inconsistent with the Privacy Shield Principles and this causes you harm, unless we are able to show that we are not responsible for the event leading to that harm.
       </p>
     </div>
-    <h2 class='text-2xl font-bold text-sunbury'>
+    <h2 class='text-sunbury'>
       Storage and Retention of Your Personal Information
     </h2>
     <div class='mt-4'>
@@ -184,7 +184,7 @@
         </li>
       </ol>
     </div>
-    <h2 class='text-2xl font-bold text-sunbury'>
+    <h2 class='text-sunbury'>
       Changes to This Statement
     </h2>
     <div class='mt-4'>
@@ -192,7 +192,7 @@
       THE SUNBURY DENTAL PRACTICE will occasionally update this Privacy Statement from time to time. If we make any changes to this Statement, we will change the "Last Updated" date above or by providing such notice about or obtaining consent to changes as may be required by applicable law. THE SUNBURY DENTAL PRACTICE encourages you to periodically review this Statement to be informed of how THE SUNBURY DENTAL PRACTICE is protecting your information.
       </p>
     </div>
-    <h2 class='text-2xl font-bold text-sunbury'>
+    <h2 class='text-sunbury'>
       Questions
     </h2>
     <div class='mt-4'>
