--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <%= image_tag "logo.png" %>
   <% end %>
   <div class="text-right">
-    <h3 class="text-2xl font-bold">01932 783 208</h3>
-    <h4 class="txt-heading text-sunbury-dark"><%= mail_to 'reception@sunburydental.co.uk', 'reception@sunburydental.co.uk' %></h4>
+    <h2>01932 783 208</h3>
+    <h3 class="text-sunbury-dark"><%= mail_to 'reception@sunburydental.co.uk', 'reception@sunburydental.co.uk' %></h3>
   </div>
 </div>
