--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,15 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  p,h2,h3,h4 {
+    @apply mb-4;
+  }
+  h2,h3,h4 {
+    @apply font-bold;
+  }
+  h2 {
+    @apply text-2xl;
+  }
+  h3 {
+    @apply text-xl;
+  }
+  h4 {
+    @apply text-lg;
+  }
+}
+
 @layer components {
   .btn-primary {
     @apply rounded py-2 px-4 bg-sunbury-dark text-white hover:bg-sunbury-dark-hover;
   }
   .btn-qcq {
     @apply rounded py-2 px-4 bg-purple-600 text-white hover:bg-purple-500;
-  }
-  .txt-heading {
-    @apply text-xl font-bold;
   }
   /* form */
   .checkbox-label-container {
