--- a/app/views/layouts/_promotion.html.erb
+++ b/app/views/layouts/_promotion.html.erb
@@ -1,4 +1,4 @@
-<div class='bg-sunbury-light font-bold text-sunbury-dark text-center py-2'>
+<div class='bg-sunbury-lighter font-bold text-sunbury-dark text-center py-2'>
   <% if promotion.document? %>
     <%= link_to promotion.title, promotion.document.url, target: '_blank' %>
   <% else %>
