Make hero image's width 100%

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "sign_product.png" %>
+<%= image_tag "sign_product.png", class: 'min-w-full' %>
 <div class="grid grid-cols-7">
   <div class="bg-red-100">
     <div class="flex flex-col left-menu">
