--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "sign_home.png" %>
+<%= image_tag "sign_home.png", class: 'min-w-full' %>
 <div class="grid grid-cols-7">
   <div class="bg-red-100">
     <div class="flex flex-col left-menu js-left-menu">
