Add workers views

--- a/app/views/layouts/_navs.html.erb
+++ b/app/views/layouts/_navs.html.erb
@@ -1,6 +1,6 @@
 <nav class="top-nav js-top-nav">
   <%= link_to "Home", homes_path, class: add_focused_style_to_top_nav('homes'), data: { turbo: false } %>
-  <%= link_to "About Us", '#', class: add_focused_style_to_top_nav(''), data: { turbo: false } %>
+  <%= link_to "About Us", workers_path, class: add_focused_style_to_top_nav('workers'), data: { turbo: false } %>
   <%= link_to "What We Do", products_path, class: add_focused_style_to_top_nav('products'), data: { turbo: false } %>
   <%= link_to "Find Us", directions_path, class: add_focused_style_to_top_nav('directions'), data: { turbo: false } %>
   <%= link_to "Advice", advices_path, class: add_focused_style_to_top_nav('advices'), data: { turbo: false } %>
