--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -2,7 +2,7 @@
 <div class="grid grid-cols-7">
   <div class="bg-red-100">
     <div class="flex flex-col left-menu js-left-menu">
-      <%= link_to 'Advice', advice_path('index'), class: 'left-menu-focused', data: { turbo_frame: :tf_content } %>
+      <%= link_to 'Advice', advices_path, class: 'left-menu-focused', data: { turbo_frame: :tf_content } %>
       <%= link_to 'Medical History', advice_path('medical_history'), data: { turbo_frame: :tf_content } %>
       <%= link_to 'Brushing', advice_path('brushing'), data: { turbo_frame: :tf_content } %>
       <%= link_to 'Extraction', advice_path('extraction'), data: { turbo_frame: :tf_content } %>
