--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -2,7 +2,7 @@
 <div class="grid grid-cols-7">
   <div class="bg-red-100">
     <div class="flex flex-col left-menu js-left-menu">
-      <%= link_to 'Welcome', home_path('index'), class: 'left-menu-focused', data: { turbo_frame: :tf_content } %>
+      <%= link_to 'Welcome', homes_path, class: 'left-menu-focused', data: { turbo_frame: :tf_content } %>
       <%= link_to 'Private HNS', home_path('private_nhs'), data: { turbo_frame: :tf_content } %>
       <%= link_to 'Emergency', home_path('emergency'), data: { turbo_frame: :tf_content } %>
     </div>
