Use #show to render templates to show pages in full when visiting each page directly

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="flex justify-between">
-  <%= link_to root_path do %>
+  <%= link_to root_path, data: { turbo: false } do %>
     <%= image_tag "logo.png" %>
   <% end %>
   <div class="text-right">
