--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,15 @@
  *= require_self
  */
 
+/* content */
+.content ul li {
+  list-style: disc;
+  margin-left: 2rem;
+}
+.content ul {
+  margin-bottom: 1rem;
+}
+
 /* form */
 label {
   display: block;
