--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -41,7 +41,7 @@
         <i class="fa-solid fa-fax text-sunbury"></i> 01932 889 003
       </div>
       <div class="mt-2">
-        <%= link_to "Privacy Policy & Cookies", home_path('privacy_policy'), class: "font-bold text-sunbury-dark" %>
+        <%= link_to "Privacy Policy & Cookies", legal_path('privacy_policy'), class: "font-bold text-sunbury-dark" %>
       </div>
     </div>
   </div>
