Make CRUD work on admin items

--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,13 +1,6 @@
-<%= form_for([:admin, @product]) do |f| %>
+<%= form_for([:admin, @product], data: { turbo: false }) do |f| %>
   <% if @product.errors.any? %>
-    <div id="error_explanation">
-      <h5><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h5>
-      <ul>
-        <% @product.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
+    <%= render partial: 'shared/form_error', locals: { form_object: @product } %>
   <% end %>
 
   <div>
@@ -29,7 +22,7 @@
     <%= f.select(:product_category_id, options_for_select(ProductCategory.all.map { |c| [c.name, c.id]}, @product.product_category_id)) %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div>
+    <%= f.submit 'Submit', class: 'btn-primary my-4' %>
   </div>
 <% end %>
