--- a/app/views/layouts/_cookie_privacy_policy.html.erb
+++ b/app/views/layouts/_cookie_privacy_policy.html.erb
@@ -1,5 +1,5 @@
 <div class="js-cookie-privacy bg-gray-100 p-4 text-center mb-4">
   This website uses cookies to ensure you get the best experience on our website.
-  <%= link_to 'Learn more', legal_path('privacy_policy'), target: '_blank', rel: 'noopener', class: 'font-bold text-sunbury-dark underline' %>
+  <%= link_to 'Learn more', legal_path('privacy_policy'), target: '_blank', rel: 'noopener', class: 'font-bold underline' %>
   <%= link_to 'GOT IT!', '#', class: 'btn-primary js-set-cookie-privacy ml-4' %>
 </div>
