--- a/app/views/legals/_privacy_policy.html.erb
+++ b/app/views/legals/_privacy_policy.html.erb
@@ -6,7 +6,7 @@ Last Updated May 15th, 2018
 </p>
 <div class='mt-4'>
   <p>
-  Protecting your private information is our priority. This Privacy Statement applies to the <a href="https://sunburydental.co.uk" class="text-sunbury-dark font-bold">sunburydental.co.uk</a> website operated by THE SUNBURY DENTAL PRACTICE or other services that link to this Statement, and it governs collection, usage, and disclosure of your personal information. This Statement does not apply to websites, applications, or services that link to different privacy statements.
+  Protecting your private information is our priority. This Privacy Statement applies to the <a href="https://sunburydental.co.uk" class="font-bold">sunburydental.co.uk</a> website operated by THE SUNBURY DENTAL PRACTICE or other services that link to this Statement, and it governs collection, usage, and disclosure of your personal information. This Statement does not apply to websites, applications, or services that link to different privacy statements.
   </p>
   <p>
   We collect and process personal information about you with your consent and/or as necessary to provide the products you use, operate our business, meet our contractual and legal obligations, protect the security of our systems and our customers, or fulfill other legitimate interests.
@@ -30,7 +30,7 @@ Last Updated May 15th, 2018
   <span class='font-bold'>
     Analytics.
   </span>
-  Third parties who provide us with analytics services for the services may also automatically collect some of the information described above, including, for example, IP address, access times, browser type and language, device type, device identifiers and Wi-Fi information. Please consult the respective privacy policies and statements of Google Analytics for more information, including how <a target="_blank" href="https://www.google.com/policies/privacy/" class="text-sunbury-dark font-bold">Google Analytics</a> use this data.
+  Third parties who provide us with analytics services for the services may also automatically collect some of the information described above, including, for example, IP address, access times, browser type and language, device type, device identifiers and Wi-Fi information. Please consult the respective privacy policies and statements of Google Analytics for more information, including how <a target="_blank" href="https://www.google.com/policies/privacy/" class="font-bold">Google Analytics</a> use this data.
   </p>
   <p>
   Please keep in mind that if you directly disclose personal information or sensitive data through THE SUNBURY DENTAL PRACTICE's public message boards, this information may be collected and used by others. We encourage you to be careful with how you use these services.
@@ -89,14 +89,14 @@ Last Updated May 15th, 2018
 </h2>
 <div class='mt-4'>
   <p>
-  If you wish to ask for access, correction, or deletion of any of your personal information held by us or a change in the way we use your information (for which we reserve the right to charge you a fee, as permitted by applicable law), please contact us at: <a href="mailto:post@sunburydental.co.uk" class="text-sunbury-dark font-bold">post@sunburydental.co.uk</a>. However, we may decline requests that are unreasonable, prohibited by law, or are not required to be honored by applicable law.
+  If you wish to ask for access, correction, or deletion of any of your personal information held by us or a change in the way we use your information (for which we reserve the right to charge you a fee, as permitted by applicable law), please contact us at: <a href="mailto:post@sunburydental.co.uk" class="font-bold">post@sunburydental.co.uk</a>. However, we may decline requests that are unreasonable, prohibited by law, or are not required to be honored by applicable law.
   </p>
   <p>
-  You may opt out of receiving promotional emails from us by following the instructions in those emails. If you opt out, we may still send you non-promotional emails, such as emails about your accounts or our ongoing business relations. You may also send requests about your contact preferences, changes to your information including requests to opt-out of sharing your personal information with third parties by emailing <a href="mailto:post@sunburydental.co.uk" class="text-sunbury-dark font-bold">post@sunburydental.co.uk</a>.
+  You may opt out of receiving promotional emails from us by following the instructions in those emails. If you opt out, we may still send you non-promotional emails, such as emails about your accounts or our ongoing business relations. You may also send requests about your contact preferences, changes to your information including requests to opt-out of sharing your personal information with third parties by emailing <a href="mailto:post@sunburydental.co.uk" class="font-bold">post@sunburydental.co.uk</a>.
   </p>
   <p>
   You have the ability to accept or decline cookies. Most Web browsers automatically accept cookies, but you can usually modify your browser setting to decline cookies if you prefer. If you choose to decline cookies, you may not be able to fully experience the interactive features of the THE SUNBURY DENTAL PRACTICE services or websites you visit.
-  Our third-party analytics and advertising partners may provide you with options to opt-out of certain information collection. For more information about the applicable choices they provide you, please visit: <a target="_blank" href="https://tools.google.com/dlpage/gaoptout" class="text-sunbury-dark font-bold">https://tools.google.com/dlpage/gaoptout</a>.
+  Our third-party analytics and advertising partners may provide you with options to opt-out of certain information collection. For more information about the applicable choices they provide you, please visit: <a target="_blank" href="https://tools.google.com/dlpage/gaoptout" class="font-bold">https://tools.google.com/dlpage/gaoptout</a>.
   </p>
   <p>
   There are many ways through which web browser signals and other similar mechanisms (for example, "Do Not Track") can indicate your choice to disable tracking, and, while we and others give you choices described in this Statement, we do not currently honor these mechanisms.
@@ -148,13 +148,13 @@ Last Updated May 15th, 2018
   </h2>
   <div class='mt-4'>
     <p>
-    THE SUNBURY DENTAL PRACTICE complies with the EU-U.S. Privacy Shield Framework and the Swiss-U.S. Privacy Shield Framework as set forth by the U.S. Department of Commerce regarding the collection, use, and retention of personal information transferred from the European Union and Switzerland to the United States, respectively. THE SUNBURY DENTAL PRACTICE has certified to the Department of Commerce that it adheres to the Privacy Shield Principles of Notice, Choice, Accountability for Onward Transfer, Security, Data Integrity and Purpose Limitation, Access, and Recourse, Enforcement and Liability. If there is any conflict between the terms in this privacy policy and the Privacy Shield Principles, the Privacy Shield Principles shall govern. The Federal Trade Commission (FTC) has jurisdiction over THE SUNBURY DENTAL PRACTICE's compliance with the Privacy Shield. To learn more about the Privacy Shield program, and to view our certification, please visit <a target="_blank" href="https://www.privacyshield.gov" class="text-sunbury-dark font-bold">https://www.privacyshield.gov</a>.
+    THE SUNBURY DENTAL PRACTICE complies with the EU-U.S. Privacy Shield Framework and the Swiss-U.S. Privacy Shield Framework as set forth by the U.S. Department of Commerce regarding the collection, use, and retention of personal information transferred from the European Union and Switzerland to the United States, respectively. THE SUNBURY DENTAL PRACTICE has certified to the Department of Commerce that it adheres to the Privacy Shield Principles of Notice, Choice, Accountability for Onward Transfer, Security, Data Integrity and Purpose Limitation, Access, and Recourse, Enforcement and Liability. If there is any conflict between the terms in this privacy policy and the Privacy Shield Principles, the Privacy Shield Principles shall govern. The Federal Trade Commission (FTC) has jurisdiction over THE SUNBURY DENTAL PRACTICE's compliance with the Privacy Shield. To learn more about the Privacy Shield program, and to view our certification, please visit <a target="_blank" href="https://www.privacyshield.gov" class="font-bold">https://www.privacyshield.gov</a>.
     </p>
     <p>
     Our participation in Privacy Shield applies to personal data that is received from the European Economic Area and Switzerland. We will comply with the Privacy Shield Principles in respect of all such personal data.
     </p>
     <p>
-    In compliance with the EU-U.S. and Swiss Privacy Shield Principles, THE SUNBURY DENTAL PRACTICE commits to resolve complaints about your privacy and our collection or use of your personal information. European Union individuals with inquiries or complaints regarding this privacy policy should first contact us at <a href="mailto:post@sunburydental.co.uk" class="text-sunbury-dark font-bold">post@sunburydental.co.uk</a>. THE SUNBURY DENTAL PRACTICE has further committed to refer unresolved privacy complaints under the EU-U.S. and Swiss Privacy Shield Principles to an independent dispute resolution mechanism free of charge to you through <a target="_blank" href="https://www.jamsadr.com/eu-us-privacy-shield" class="text-sunbury-dark font-bold">JAMS</a>. Finally, you may have the right to invoke binding arbitration to resolve complaints, as described in <a target="_blank" href="https://www.privacyshield.gov/article?id=ANNEX-I-introduction" class="text-sunbury-dark font-bold">Annex I</a> I to the Privacy Shield Principles.
+    In compliance with the EU-U.S. and Swiss Privacy Shield Principles, THE SUNBURY DENTAL PRACTICE commits to resolve complaints about your privacy and our collection or use of your personal information. European Union individuals with inquiries or complaints regarding this privacy policy should first contact us at <a href="mailto:post@sunburydental.co.uk" class="font-bold">post@sunburydental.co.uk</a>. THE SUNBURY DENTAL PRACTICE has further committed to refer unresolved privacy complaints under the EU-U.S. and Swiss Privacy Shield Principles to an independent dispute resolution mechanism free of charge to you through <a target="_blank" href="https://www.jamsadr.com/eu-us-privacy-shield" class="font-bold">JAMS</a>. Finally, you may have the right to invoke binding arbitration to resolve complaints, as described in <a target="_blank" href="https://www.privacyshield.gov/article?id=ANNEX-I-introduction" class="font-bold">Annex I</a> I to the Privacy Shield Principles.
     </p>
     <p>
     If we transfer your personal information to a third party agent or service provider for processing, we remain potentially liable under the Privacy Shield Principles if our third party agent or service provider processes your personal information in a manner inconsistent with the Privacy Shield Principles and this causes you harm, unless we are able to show that we are not responsible for the event leading to that harm.
@@ -195,7 +195,7 @@ Last Updated May 15th, 2018
   </h2>
   <div class='mt-4'>
     <p>
-    If you have any questions about this policy, or if you wish to lodge a complaint about our privacy practices, please contact us at <a href="mailto:post@sunburydental.co.uk" class="text-sunbury-dark font-bold">post@sunburydental.co.uk</a>. We reserve the right to make changes to this policy. Any changes to this policy will be posted.
+    If you have any questions about this policy, or if you wish to lodge a complaint about our privacy practices, please contact us at <a href="mailto:post@sunburydental.co.uk" class="font-bold">post@sunburydental.co.uk</a>. We reserve the right to make changes to this policy. Any changes to this policy will be posted.
     </p>
   </div>
 </div>
