--- a/app/views/admin/product_categories/_form.html.erb
+++ b/app/views/admin/product_categories/_form.html.erb
@@ -1,14 +1,6 @@
-<%= form_for([:admin, @product_category]) do |f| %>
+<%= form_for([:admin, @product_category], data: { turbo: false }) do |f| %>
   <% if @product_category.errors.any? %>
-    <div id="error_explanation">
-      <h5><%= pluralize(@product_category.errors.count, "error") %> prohibited this product_category from being saved:</h5>
-
-      <ul>
-        <% @product_category.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
+    <%= render partial: 'shared/form_error', locals: { form_object: @product_category } %>
   <% end %>
 
   <div>
@@ -21,7 +13,7 @@
     <%= f.text_field :weight %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div>
+    <%= f.submit 'Submit', class: 'btn-primary my-4' %>
   </div>
 <% end %>
