--- a/app/views/admin/product_categories/index.html.erb
+++ b/app/views/admin/product_categories/index.html.erb
@@ -4,18 +4,19 @@
   <tr>
     <th>Name</th>
     <th>Weight</th>
+    <th></th>
   </tr>
 
   <% @product_categories.each do |product_category| %>
     <tr>
-    <td><%= product_category.name %></td>
-    <td><%= product_category.weight %></td>
-    <td><%= link_to 'Show', admin_product_category_path(product_category) %> | <%= link_to 'Edit', edit_admin_product_category_path(product_category) %> | <%= link_to 'Delete', admin_product_category_path(product_category), confirm: "Are you sure?\n\nThis will delete all the associated products:\n#{product_category.products.map(&:name).join(', ')}.", method: :delete %></td>
+      <td><%= product_category.name %></td>
+      <td><%= product_category.weight %></td>
+      <td><%= link_to 'Show', admin_product_category_path(product_category) %> | <%= link_to 'Edit', edit_admin_product_category_path(product_category) %> | <%= link_to 'Delete', admin_product_category_path(product_category), data: { turbo_method: :delete, turbo_confirm: "Are you sure?\n\nThis will delete all the associated products:\n#{product_category.products.map(&:name).to_sentence}." } %></td>
     </tr>
   <% end %>
 </table>
 
-<div>
+<div class='mt-4'>
   <%= link_to 'Add new product category', new_admin_product_category_path %>
 </div>
 <div>
