--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -6,20 +6,23 @@
     <th>Name</th>
     <th>Price</th>
     <th>Weight</th>
+    <th></th>
   </tr>
 
   <% @products.each do |product| %>
     <tr>
-    <td><%= product.product_category.name %></td>
-    <td><%= product.name %></td>
-    <td><%= product.price %></td>
-    <td><%= product.weight %></td>
-    <td><%= link_to 'Show', admin_product_path(product) %> | <%= link_to 'Edit', edit_admin_product_path(product) %> | <%= link_to 'Delete', admin_product_path(product), confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+      <td><%= product.product_category.name %></td>
+      <td><%= product.name %></td>
+      <td><%= product.price %></td>
+      <td><%= product.weight %></td>
+      <td><%= link_to 'Show', admin_product_path(product) %> | <%= link_to 'Edit', edit_admin_product_path(product) %> | <%= link_to 'Delete', admin_product_path(product), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td>
+    </tr>
+  <% end %>
 </table>
 
-<%= link_to 'Add new product', new_admin_product_path %>
+<div class='mt-4'>
+  <%= link_to 'Add new product', new_admin_product_path %>
+</div>
 <div>
   <%= link_to 'Manage Product Categories', admin_product_categories_path, class: 'manage' %>
 </div>
