--- a/app/views/admin/workers/_form.html.erb
+++ b/app/views/admin/workers/_form.html.erb
@@ -1,14 +1,6 @@
-<%= form_for [:admin, @worker], html: {multipart: true} do |f| %>
+<%= form_for([:admin, @worker], html: {multipart: true}, data: { turbo: false }) do |f| %>
   <% if @worker.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@worker.errors.count, "error") %> prohibited this worker from being saved:</h2>
-
-      <ul>
-        <% @worker.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
+    <%= render partial: 'shared/form_error', locals: { form_object: @worker } %>
   <% end %>
 
   <div>
@@ -47,7 +39,7 @@
     <%= f.label :weight %>
     <%= f.text_field :weight %>
   </div>
-  <div>
+  <div class="mt-4">
     <%= image_tag(@worker.avatar_url) if @worker.avatar? %>
     <%= f.file_field :avatar %>
   </div>
@@ -57,7 +49,7 @@
       <%= f.check_box :remove_avatar %>
     <% end %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div>
+    <%= f.submit 'Submit', class: 'btn-primary my-4' %>
   </div>
 <% end %>
