--- a/app/views/directions/index.html.erb
+++ b/app/views/directions/index.html.erb
@@ -4,7 +4,7 @@
       <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=145%2BGreen%2BStreet%2B-%2BSunbury%2Bon%2BThames%2B-%2BMiddlesex%2B-%2BTW16%2B6QL&ie=UTF8&z=14&t=m&iwloc=near&output=embed"></iframe>
     </div>
     <div class="mt-2 text-right">
-      <%= link_to "View Larger Map", "https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=145%2BGreen%2BStreet%2B-%2BSunbury%2Bon%2BThames%2B-%2BMiddlesex%2B-%2BTW16%2B6QL&ie=UTF8&z=14&t=m&iwloc=near", target: "_blank", class: "font-bold text-sunbury-dark" %>
+      <%= link_to "View Larger Map", "https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=145%2BGreen%2BStreet%2B-%2BSunbury%2Bon%2BThames%2B-%2BMiddlesex%2B-%2BTW16%2B6QL&ie=UTF8&z=14&t=m&iwloc=near", target: "_blank", class: "font-bold" %>
     </div>
   </div>
   <div class="m-4">
