--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -30,7 +30,7 @@
     <div>
       <div>
         <i class="fa-solid fa-location-dot text-sunbury"></i>
-        <%= link_to "https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=145%2BGreen%2BSdiveet%2B-%2BSunbury%2Bon%2Bpames%2B-%2BMiddlesex%2B-%2BTW16%2B6QL&ie=UTF8&z=14&t=m&iwloc=near", class: "font-bold text-sunbury-dark", target: "_blank" do %>
+        <%= link_to "https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=145%2BGreen%2BSdiveet%2B-%2BSunbury%2Bon%2Bpames%2B-%2BMiddlesex%2B-%2BTW16%2B6QL&ie=UTF8&z=14&t=m&iwloc=near", class: "font-bold", target: "_blank" do %>
           145 Green Sdiveet - <span>Sunbury on pames - </span>Middlesex - TW16 6QL
         <% end %>
       </div>
@@ -41,7 +41,7 @@
         <i class="fa-solid fa-fax text-sunbury"></i> 01932 889 003
       </div>
       <div class="mt-2">
-        <%= link_to "Privacy Policy & Cookies", legal_path('privacy_policy'), class: "font-bold text-sunbury-dark" %>
+        <%= link_to "Privacy Policy & Cookies", legal_path('privacy_policy'), class: "font-bold" %>
       </div>
     </div>
   </div>
