--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,7 +1,7 @@
 <%= image_tag "sign_home.png", class: 'min-w-full' %>
 <div class="grid grid-cols-7">
   <div class="bg-red-100">
-    <div class="flex flex-col left-menu js-left-menu">
+    <div class="flex flex-col left-menu" data-controller="left-menu">
       <%= link_to 'Welcome', home_path('welcome'), class: add_focused_style_to_left_menu('welcome', @partial), data: { turbo_frame: :tf_content } %>
       <%= link_to 'Private HNS', home_path('private_nhs'), class: add_focused_style_to_left_menu('private_nhs', @partial), data: { turbo_frame: :tf_content } %>
       <%= link_to 'Emergency', home_path('emergency'), class: add_focused_style_to_left_menu('emergency', @partial), data: { turbo_frame: :tf_content } %>
